--- a/front-end/index.css
+++ b/front-end/index.css
@@ -17,15 +17,15 @@ header {
     justify-content: left;
     background-color: rgb(196, 196, 196);
     width: 100vw;
-    height: 5vw;
+    height: 70px;
 }
 
 header h1 {
-    font-size: 3vw;
+    font-size: 42px;
     font-family: "Viga", sans-serif;
     font-weight: 400;
     font-style: normal;
-    margin-top: 0.3vw;
+    margin-top: 0.4vw;
     
 }
 #corpo {
@@ -38,10 +38,10 @@ header h1 {
     height: 1vw;
     background-color: rgba(0, 0, 0, 0);
     color: white;
-    font-size: 2.5vw;
-    margin-top: 1vw;
-    margin-right: 0.5vw;
-    margin-left: 1.2vw;
+    font-size: 36px;
+    margin-top: 16px;
+    margin-right: 9px;
+    margin-left: 20px;
 }
 
 :focus #btn {
@@ -89,3 +89,34 @@ header h1 {
     .sidenav a {font-size: 18px;}
     
   }
+/*
+quando a tela for até 
+
+*/
+  @media screen and (max-width: 400px){
+  header {
+    height: 50px;
+  }
+
+  #titulo {
+    font-size: 34px;
+  
+  }
+
+  #btn {
+    font-size: 26px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 15px;
+  }
+
+  .menu a {
+    padding: 5px 5px 5px 2px;
+    text-decoration: none;
+    font-size: 16px;
+  }
+
+
+  }
+
+
