--- a/front-end/Administracao.css
+++ b/front-end/Administracao.css
@@ -94,6 +94,77 @@ header h1 {
     color: #3a3838;
   }
 
+  .h2 {
+    font-size: 28px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 25px;
+
+}
+
+  .container-tabela {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .tabela-produtos {
+    width: 90%;
+  }
+
+  .tabela-produtos tr, td {
+    padding: 3px 3px 3px 3px;
+    
+  }
+
+  .tabela-produtos th {
+    padding: 3px 3px 3px 3px;
+    background-color: green;
+    border: 2px solid;
+    border-color: green;
+  }
+
+  tr:nth-child(even) {
+    background-color: #c5c4c1;
+  }
+
+  .container-botao-cadastrar{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .botao-cadastrar {
+    width: 180px;
+    height: 60px;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 12px;
+    border: none;
+    background-color: green;
+    margin-top: 20px;
+  }
+
+  .botao-cadastrar:hover {
+    transition: 0.2s;
+    background-color: #2d9521;
+    margin-top: 20px;
+  }
+
+  .botao {
+    height: 30px;
+    width: 70px;
+    font-size: 18px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(201, 246, 201);
+  }
+
+  .botao:hover {
+    transition: 0.2s;
+    background-color: #87ce7f;
+  }
+
 /*
 quando a tela for até 
 
