--- a/front-end/CadastrarProduto.css
+++ b/front-end/CadastrarProduto.css
@@ -30,7 +30,22 @@ header h1 {
     
 }
 
+.container-erro{
+  display: flex;
+  justify-content: center;
+}
 
+.erro {
+  background-color: red;
+  text-align: center;
+  height: 50px;
+  width: auto;
+  max-width: 50%;
+  margin-top: 30px;
+  font-size: 20px;
+  color: white;
+  padding: 3px 3px 3px 3px;
+}
 
 #btn {
     border-style: unset;
